--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.485.0",
     "motion": "^12.23.12",
-    "next": "^15.2.4",
+    "next": "15.2.8",
     "postprocessing": "^6.37.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
